--- a/Dealwheel/DealView.xib
+++ b/Dealwheel/DealView.xib
@@ -17,57 +17,81 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="DealView" customModule="Dealwheel" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="500"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wedge.png" translatesAutoresizingMaskIntoConstraints="NO" id="tRi-mc-7YY">
-                    <rect key="frame" x="101" y="37" width="118" height="128"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="128" id="DDZ-tg-dhd"/>
-                        <constraint firstAttribute="width" constant="118" id="N1T-le-uQT"/>
-                    </constraints>
+                    <rect key="frame" x="90" y="10" width="138" height="150"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You Won!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WbE-fI-6d7">
-                    <rect key="frame" x="93" y="185" width="136" height="22.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You Won" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WbE-fI-6d7">
+                    <rect key="frame" x="122.5" y="168" width="75" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="au1-42-Jpj"/>
+                    </constraints>
                     <fontDescription key="fontDescription" name="BudmoJiggler-Regular" family="Budmo" pointSize="19"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ury-L2-Xw3">
-                    <rect key="frame" x="71" y="437" width="179" height="48"/>
+                    <rect key="frame" x="70" y="450" width="179" height="28"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="48" id="Klw-hW-i0v"/>
+                        <constraint firstAttribute="height" constant="28" id="HFU-Ig-LEl"/>
                     </constraints>
-                    <state key="normal" title="Respin"/>
+                    <fontDescription key="fontDescription" name="BudmoJiggler-Regular" family="Budmo" pointSize="17"/>
+                    <state key="normal" title="Respin">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
                     <connections>
                         <action selector="respinButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="IG9-p2-2iG"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MHd-jC-ETd">
-                    <rect key="frame" x="72" y="381" width="179" height="48"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="48" id="fAU-4A-V0b"/>
-                    </constraints>
-                    <state key="normal" title="Buy for 50 points"/>
+                    <rect key="frame" x="70" y="410" width="179" height="32"/>
+                    <fontDescription key="fontDescription" name="BudmoJiggler-Regular" family="Budmo" pointSize="17"/>
+                    <state key="normal" title="Buy for 50 points">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
                     <connections>
                         <action selector="purchaseButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="GD3-Gn-YCw"/>
                     </connections>
                 </button>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tempfoodimage.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="3Ad-WN-bEG">
+                    <rect key="frame" x="43" y="201" width="232" height="138"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="138" id="AGb-HO-xsm"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lolos Awesome Mexican Restaurant" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ggT-lW-Xkd">
+                    <rect key="frame" x="60" y="350" width="200" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="ukV-hp-pfW"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="BudmoJiggler-Regular" family="Budmo" pointSize="17"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
             <constraints>
-                <constraint firstItem="Ury-L2-Xw3" firstAttribute="top" secondItem="MHd-jC-ETd" secondAttribute="bottom" constant="8" symbolic="YES" id="1HN-0o-QdU"/>
-                <constraint firstItem="WbE-fI-6d7" firstAttribute="top" secondItem="tRi-mc-7YY" secondAttribute="bottom" constant="20" id="2Mq-2S-7Yw"/>
-                <constraint firstAttribute="bottom" secondItem="Ury-L2-Xw3" secondAttribute="bottom" constant="83" id="428-hg-50k"/>
-                <constraint firstItem="Ury-L2-Xw3" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="4b4-fW-fkV"/>
-                <constraint firstItem="WbE-fI-6d7" firstAttribute="centerX" secondItem="Ury-L2-Xw3" secondAttribute="centerX" id="8rd-Cm-aGI"/>
-                <constraint firstItem="MHd-jC-ETd" firstAttribute="centerX" secondItem="WbE-fI-6d7" secondAttribute="centerX" id="9A9-bP-LiH"/>
-                <constraint firstItem="tRi-mc-7YY" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="37" id="NbJ-RF-nX3"/>
-                <constraint firstItem="MHd-jC-ETd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="72" id="Ymd-M8-Dso"/>
-                <constraint firstItem="Ury-L2-Xw3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="71" id="fLz-fh-4Uu"/>
-                <constraint firstItem="tRi-mc-7YY" firstAttribute="centerX" secondItem="Ury-L2-Xw3" secondAttribute="centerX" id="ptM-Nn-HIX"/>
-                <constraint firstItem="WbE-fI-6d7" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="93" id="wAz-9r-ixJ"/>
+                <constraint firstItem="3Ad-WN-bEG" firstAttribute="top" secondItem="WbE-fI-6d7" secondAttribute="bottom" constant="12" id="1fu-M9-nS4"/>
+                <constraint firstItem="ggT-lW-Xkd" firstAttribute="top" secondItem="3Ad-WN-bEG" secondAttribute="bottom" constant="11" id="1wJ-JB-948"/>
+                <constraint firstItem="MHd-jC-ETd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="70" id="3CG-MS-u2r"/>
+                <constraint firstItem="ggT-lW-Xkd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="60" id="Doe-zD-Nni"/>
+                <constraint firstItem="WbE-fI-6d7" firstAttribute="top" secondItem="tRi-mc-7YY" secondAttribute="bottom" constant="8" symbolic="YES" id="Hl1-uY-dlI"/>
+                <constraint firstItem="tRi-mc-7YY" firstAttribute="centerX" secondItem="WbE-fI-6d7" secondAttribute="centerX" id="IZU-fa-8B0"/>
+                <constraint firstItem="ggT-lW-Xkd" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="OxF-Th-DGU"/>
+                <constraint firstItem="MHd-jC-ETd" firstAttribute="leading" secondItem="Ury-L2-Xw3" secondAttribute="leading" id="QCv-bE-c7d"/>
+                <constraint firstItem="tRi-mc-7YY" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="90" id="SsP-Mc-r6v"/>
+                <constraint firstItem="MHd-jC-ETd" firstAttribute="trailing" secondItem="Ury-L2-Xw3" secondAttribute="trailing" id="V6C-7e-fqw"/>
+                <constraint firstItem="Ury-L2-Xw3" firstAttribute="top" secondItem="MHd-jC-ETd" secondAttribute="bottom" constant="8" symbolic="YES" id="a3E-Mq-4Wd"/>
+                <constraint firstItem="3Ad-WN-bEG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="43" id="avn-Zc-gDG"/>
+                <constraint firstItem="ggT-lW-Xkd" firstAttribute="centerX" secondItem="MHd-jC-ETd" secondAttribute="centerX" id="dq8-4X-TC1"/>
+                <constraint firstItem="MHd-jC-ETd" firstAttribute="top" secondItem="ggT-lW-Xkd" secondAttribute="bottom" constant="16" id="gEb-Kz-lOS"/>
+                <constraint firstItem="tRi-mc-7YY" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="hTp-YX-MIK"/>
+                <constraint firstItem="WbE-fI-6d7" firstAttribute="centerX" secondItem="3Ad-WN-bEG" secondAttribute="centerX" id="vhy-Yh-Yhs"/>
+                <constraint firstItem="3Ad-WN-bEG" firstAttribute="centerX" secondItem="MHd-jC-ETd" secondAttribute="centerX" id="wEN-Sr-oQz"/>
             </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="respinButton" destination="Ury-L2-Xw3" id="uKl-hL-lQB"/>
             </connections>
@@ -75,6 +99,7 @@
         </view>
     </objects>
     <resources>
+        <image name="tempfoodimage.jpg" width="440" height="264"/>
         <image name="wedge.png" width="150" height="150"/>
     </resources>
 </document>
